@@ -1,4 +1,4 @@
-/* $Header: /cvs/maptools/cvsroot/libtiff/libtiff/tif_warning.c,v 1.1 1999-07-27 21:50:27 mike Exp $ */
+/* $Header: /cvs/maptools/cvsroot/libtiff/libtiff/tif_warning.c,v 1.2 2005-12-23 01:18:59 joris Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -29,6 +29,8 @@
  */
 #include "tiffiop.h"
 
+TIFFErrorHandlerExt _TIFFwarningHandlerExt = NULL;
+
 TIFFErrorHandler
 TIFFSetWarningHandler(TIFFErrorHandler handler)
 {
@@ -37,13 +39,36 @@ TIFFSetWarningHandler(TIFFErrorHandler handler)
 	return (prev);
 }
 
+TIFFErrorHandlerExt
+TIFFSetWarningHandlerExt(TIFFErrorHandlerExt handler)
+{
+	TIFFErrorHandlerExt prev = _TIFFwarningHandlerExt;
+	_TIFFwarningHandlerExt = handler;
+	return (prev);
+}
+
 void
 TIFFWarning(const char* module, const char* fmt, ...)
 {
-	if (_TIFFwarningHandler) {
-		va_list ap;
-		va_start(ap, fmt);
+	va_list ap;
+	va_start(ap, fmt);
+	if (_TIFFwarningHandler)
 		(*_TIFFwarningHandler)(module, fmt, ap);
-		va_end(ap);
-	}
+	if (_TIFFwarningHandlerExt)
+		(*_TIFFwarningHandlerExt)(0, module, fmt, ap);
+	va_end(ap);
 }
+
+void
+TIFFWarningExt(thandle_t fd, const char* module, const char* fmt, ...)
+{
+	va_list ap;
+	va_start(ap, fmt);
+	if (_TIFFwarningHandler)
+		(*_TIFFwarningHandler)(module, fmt, ap);
+	if (_TIFFwarningHandlerExt)
+		(*_TIFFwarningHandlerExt)(fd, module, fmt, ap);
+	va_end(ap);
+}
+
+
