@@ -1,3 +1,11 @@
+2005-12-23  Joris Van Damme  <joris.at.lebbeke@skynet.be>
+
+	* libtiff/tiffio.h: fixed typo that potentially resulted in 
+	redefininition of USE_WIN32_FILEIO
+
+	* libtiff/*: Added more 'dual-mode' error handling: Done TIFFWarning 
+        calls in core LibTiff.
+
 2005-12-21  Andrey Kiselev  <dron@remotesensing.org>
 
 	* libtiff/{tif_dir.c, tif_dir.h, tif_print.c}: Make RichTIFFIPTC,
